--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,31 @@
   padding: 0;
 }
 
+@font-face {
+  font-family: "StratosSkyeng";
+  src: url("../fonts/Web fonts/stratosskyengweb-regular.woff2") format("woff2");
+  font-style: normal;
+  font-weight: normal;
+}
+
 body {
   font-family: "StratosSkyeng", sans-serif;
   font-style: normal;
   background-color: #004980;
+  position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .main {
-  background-color: #004980;
   width: 1024px;
   height: 774px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
-
 .container {
   width: 480px;
   height: 460px;
@@ -34,6 +41,7 @@ body {
 }
 
 .level-choice {
+  font-family: "StratosSkyeng";
   width: 208px;
   height: 96px;
   font-size: 40px;
@@ -45,8 +53,6 @@ body {
 .level {
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  flex-wrap: nowrap;
   gap: 24px;
 }
 
@@ -68,6 +74,7 @@ body {
 .start-button {
   background-color: #7ac100;
   border-radius: 12px;
+  box-sizing: border-box;
   width: 246px;
   height: 60px;
   display: flex;
@@ -77,4 +84,5 @@ body {
   line-height: 32px;
   color: #ffffff;
   text-decoration: none;
+  border: none;
 }
