--- a/styles.css
+++ b/styles.css
@@ -86,3 +86,11 @@ body {
   text-decoration: none;
   border: none;
 }
+
+.start-button:hover {
+  background-color: #72a11f;
+}
+
+.chosen-level {
+  border: 2px solid #2d9dd5;
+}
